demenchuk/examples/errors/lexer/05_invalid_comment.riv
# LEXER ERROR: Незакрытый многострочный комментарий
# Ожидаемая ошибка: Unclosed multi-line comment at line 4

x = 10
/* Это многострочный
   комментарий без закрытия
y = 20
write(x + y)
